force/log/objects/Log__c/Log__c.object-meta.xml
<CustomObject>
    <label>Log</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>