force/log/objects/Log__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Level</label>
    <length>10</length>
    <type>Text</type>
</CustomField>