force/log/objects/Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>