force/log/objects/Log__c/fields/Stack__c.field-meta.xml
<CustomField>
    <fullName>Stack__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Stack</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>