force/log/objects/Log__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>