force/log/objects/Log__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>User</label>
    <length>80</length>
    <type>Text</type>
</CustomField>